# openvino_num

./: ..gitignore.un~  .gitignore~  CMakeLists.txt  OpenvinoInfer.cpp  OpenvinoInfer.h  README.md  main.cpp
model/: v20_gamma_64_641.mapping  v20_gamma_64_641.xml
